v5: Drop Java 8 and Refactor file import (#677)